fixed spacing of cards on contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -83,12 +83,13 @@
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
-    padding: 0px 5% 55px;
+    padding: 0px 5% 45px;
   }
 
   @media (max-width: 768px) {
     #contact-text-section {
       display: block;
+      margin-bottom: 0px;
     }
     .cards {
       width: 100%;
